Fix: variables and constants were barely visible in light theme

--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,7 @@ article {
             color: var(--contrast);
 
             .variable {
-                color: whitesmoke;
+                color: var(--contrast)                
             }
 
             .operator {
